--- a/public/styles.css
+++ b/public/styles.css
@@ -87,8 +87,7 @@ html {
 }
 
 main {
-    padding: 6rem;
-    margin-top: 6rem;
+    padding: 2rem 6rem;
 
     @media screen and (max-width:768px) {
         padding: 2rem;
